config/helm/argocd/argocd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
spec:
  publishNotReadyAddresses: true
  ports:
    - name: http
      port: 8881
      protocol: TCP
      targetPort: 8080
    - name: https
      port: 1443
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: argocd-server
  sessionAffinity: None
